// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FE Mockserver CDS Plugin can also load XML files 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\">
        <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
    </edmx:Reference>
    <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\">
        <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
    </edmx:Reference>
    <edmx:DataServices>
        <Schema Namespace=\\"sap.fe.mockserver.ValidCDS\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
            <EntityContainer Name=\\"EntityContainer\\">
                <EntitySet Name=\\"RootElement\\" EntityType=\\"sap.fe.mockserver.ValidCDS.RootElement\\">
                    <NavigationPropertyBinding Path=\\"Sibling\\" Target=\\"RootElement\\"/>
                </EntitySet>
            </EntityContainer>
            <EntityType Name=\\"RootElement\\">
                <Key>
                    <PropertyRef Name=\\"ID\\"/>
                </Key>
                <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
                <Property Name=\\"Prop1\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"Prop2\\" Type=\\"Edm.String\\"/>
                <Property Name=\\"isBoundAction1Hidden\\" Type=\\"Edm.Boolean\\"/>
                <Property Name=\\"isBoundAction2Hidden\\" Type=\\"Edm.Boolean\\"/>
                <Property Name=\\"isBoundAction3Hidden\\" Type=\\"Edm.Boolean\\"/>
                <Property Name=\\"Sibling_ID\\" Type=\\"Edm.Int32\\"/>
                <NavigationProperty Name=\\"Sibling\\" Type=\\"sap.fe.mockserver.ValidCDS.RootElement\\">
                    <ReferentialConstraint Property=\\"Sibling_ID\\" ReferencedProperty=\\"ID\\"/>
                </NavigationProperty>
            </EntityType>
            <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/ID\\">
                <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
            </Annotations>
            <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/Prop1\\">
                <Annotation Term=\\"Common.Label\\" String=\\"First Prop\\"/>
            </Annotations>
            <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/Prop2\\">
                <Annotation Term=\\"Common.Label\\" String=\\"Second Propy\\"/>
            </Annotations>
            <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction1Hidden\\">
                <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 1 Hidden\\"/>
            </Annotations>
            <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction2Hidden\\">
                <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 2 Hidden\\"/>
            </Annotations>
            <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction3Hidden\\">
                <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 3 Hidden\\"/>
            </Annotations>
        </Schema>
    </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`FE Mockserver CDS Plugin can compile valid CDS file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:DataServices>
    <Schema Namespace=\\"sap.fe.mockserver.ValidCDS\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
      <EntityContainer Name=\\"EntityContainer\\">
        <EntitySet Name=\\"RootElement\\" EntityType=\\"sap.fe.mockserver.ValidCDS.RootElement\\">
          <NavigationPropertyBinding Path=\\"Sibling\\" Target=\\"RootElement\\"/>
        </EntitySet>
      </EntityContainer>
      <EntityType Name=\\"RootElement\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
        <Property Name=\\"Prop1\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"Prop2\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"isBoundAction1Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction2Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction3Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"Sibling_ID\\" Type=\\"Edm.Int32\\"/>
        <NavigationProperty Name=\\"Sibling\\" Type=\\"sap.fe.mockserver.ValidCDS.RootElement\\">
          <ReferentialConstraint Property=\\"Sibling_ID\\" ReferencedProperty=\\"ID\\"/>
        </NavigationProperty>
      </EntityType>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/ID\\">
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/Prop1\\">
        <Annotation Term=\\"Common.Label\\" String=\\"First Prop\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/Prop2\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Second Propy\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction1Hidden\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 1 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction2Hidden\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 2 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction3Hidden\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 3 Hidden\\"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`FE Mockserver CDS Plugin can compile valid CDS file in V2 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"1.0\\" xmlns:edmx=\\"http://schemas.microsoft.com/ado/2007/06/edmx\\" xmlns:m=\\"http://schemas.microsoft.com/ado/2007/08/dataservices/metadata\\" xmlns:sap=\\"http://www.sap.com/Protocols/SAPData\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion=\\"2.0\\">
    <Schema Namespace=\\"sap.fe.mockserver.ValidCDS\\" xmlns=\\"http://schemas.microsoft.com/ado/2008/09/edm\\">
      <EntityContainer Name=\\"EntityContainer\\" m:IsDefaultEntityContainer=\\"true\\">
        <EntitySet Name=\\"RootElement\\" EntityType=\\"sap.fe.mockserver.ValidCDS.RootElement\\"/>
        <AssociationSet Name=\\"RootElement_Sibling\\" Association=\\"sap.fe.mockserver.ValidCDS.RootElement_Sibling\\">
          <End Role=\\"RootElement\\" EntitySet=\\"RootElement\\"/>
          <End Role=\\"RootElement1\\" EntitySet=\\"RootElement\\"/>
        </AssociationSet>
      </EntityContainer>
      <EntityType Name=\\"RootElement\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Int32\\" Nullable=\\"false\\"/>
        <Property Name=\\"Prop1\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"Prop2\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"isBoundAction1Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction2Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction3Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"Sibling_ID\\" Type=\\"Edm.Int32\\"/>
        <NavigationProperty Name=\\"Sibling\\" Relationship=\\"sap.fe.mockserver.ValidCDS.RootElement_Sibling\\" FromRole=\\"RootElement\\" ToRole=\\"RootElement1\\"/>
      </EntityType>
      <Association Name=\\"RootElement_Sibling\\">
        <End Role=\\"RootElement\\" Type=\\"sap.fe.mockserver.ValidCDS.RootElement\\" Multiplicity=\\"*\\"/>
        <End Role=\\"RootElement1\\" Type=\\"sap.fe.mockserver.ValidCDS.RootElement\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"RootElement1\\">
            <PropertyRef Name=\\"ID\\"/>
          </Principal>
          <Dependent Role=\\"RootElement\\">
            <PropertyRef Name=\\"Sibling_ID\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/ID\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Core.Computed\\" Bool=\\"true\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/Prop1\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"First Prop\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/Prop2\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Second Propy\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction1Hidden\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 1 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction2Hidden\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 2 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDS.RootElement/isBoundAction3Hidden\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 3 Hidden\\"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`FE Mockserver CDS Plugin can compile valid CDS file using common stuff 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"4.0\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\">
    <edmx:Include Alias=\\"UI\\" Namespace=\\"com.sap.vocabularies.UI.v1\\"/>
  </edmx:Reference>
  <edmx:DataServices>
    <Schema Namespace=\\"sap.fe.mockserver.ValidCDSWithCommon\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
      <EntityContainer Name=\\"EntityContainer\\">
        <EntitySet Name=\\"RootElement\\" EntityType=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement\\">
          <NavigationPropertyBinding Path=\\"Currency\\" Target=\\"Currencies\\"/>
        </EntitySet>
        <EntitySet Name=\\"Currencies\\" EntityType=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\">
          <NavigationPropertyBinding Path=\\"texts\\" Target=\\"Currencies_texts\\"/>
          <NavigationPropertyBinding Path=\\"localized\\" Target=\\"Currencies_texts\\"/>
        </EntitySet>
        <EntitySet Name=\\"Currencies_texts\\" EntityType=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts\\"/>
      </EntityContainer>
      <EntityType Name=\\"RootElement\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"Prop1\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"Prop2\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"isBoundAction1Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction2Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction3Hidden\\" Type=\\"Edm.Boolean\\"/>
        <NavigationProperty Name=\\"Currency\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\">
          <ReferentialConstraint Property=\\"Currency_code\\" ReferencedProperty=\\"code\\"/>
        </NavigationProperty>
        <Property Name=\\"Currency_code\\" Type=\\"Edm.String\\" MaxLength=\\"3\\"/>
      </EntityType>
      <EntityType Name=\\"Currencies\\">
        <Key>
          <PropertyRef Name=\\"code\\"/>
        </Key>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"descr\\" Type=\\"Edm.String\\" MaxLength=\\"1000\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\" MaxLength=\\"3\\" Nullable=\\"false\\"/>
        <Property Name=\\"symbol\\" Type=\\"Edm.String\\" MaxLength=\\"5\\"/>
        <NavigationProperty Name=\\"texts\\" Type=\\"Collection(sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts)\\">
          <OnDelete Action=\\"Cascade\\"/>
        </NavigationProperty>
        <NavigationProperty Name=\\"localized\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts\\">
          <ReferentialConstraint Property=\\"code\\" ReferencedProperty=\\"code\\"/>
        </NavigationProperty>
      </EntityType>
      <EntityType Name=\\"Currencies_texts\\">
        <Key>
          <PropertyRef Name=\\"locale\\"/>
          <PropertyRef Name=\\"code\\"/>
        </Key>
        <Property Name=\\"locale\\" Type=\\"Edm.String\\" MaxLength=\\"14\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"descr\\" Type=\\"Edm.String\\" MaxLength=\\"1000\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\" MaxLength=\\"3\\" Nullable=\\"false\\"/>
      </EntityType>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Prop1\\">
        <Annotation Term=\\"Common.Label\\" String=\\"First Prop\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Prop2\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Second Propy\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/isBoundAction1Hidden\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 1 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/isBoundAction2Hidden\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 2 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/isBoundAction3Hidden\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 3 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Currency\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Currency}\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"{i18n>CurrencyCode.Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Currency_code\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Currency}\\"/>
        <Annotation Term=\\"Common.ValueList\\">
          <Record Type=\\"Common.ValueListType\\">
            <PropertyValue Property=\\"Label\\" String=\\"{i18n>Currency}\\"/>
            <PropertyValue Property=\\"CollectionPath\\" String=\\"Currencies\\"/>
            <PropertyValue Property=\\"Parameters\\">
              <Collection>
                <Record Type=\\"Common.ValueListParameterInOut\\">
                  <PropertyValue Property=\\"LocalDataProperty\\" PropertyPath=\\"Currency_code\\"/>
                  <PropertyValue Property=\\"ValueListProperty\\" String=\\"code\\"/>
                </Record>
                <Record Type=\\"Common.ValueListParameterDisplayOnly\\">
                  <PropertyValue Property=\\"ValueListProperty\\" String=\\"name\\"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term=\\"Core.Description\\" String=\\"{i18n>CurrencyCode.Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\">
        <Annotation Term=\\"UI.Identification\\">
          <Collection>
            <Record Type=\\"UI.DataField\\">
              <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/name\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Name}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/descr\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/code\\">
        <Annotation Term=\\"Common.Text\\" Path=\\"name\\"/>
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>CurrencyCode}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/symbol\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>CurrencySymbol}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts/name\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Name}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts/descr\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts/code\\">
        <Annotation Term=\\"Common.Text\\" Path=\\"name\\"/>
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>CurrencyCode}\\"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;

exports[`FE Mockserver CDS Plugin can compile valid CDS file using common stuff in V2 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<edmx:Edmx Version=\\"1.0\\" xmlns:edmx=\\"http://schemas.microsoft.com/ado/2007/06/edmx\\" xmlns:m=\\"http://schemas.microsoft.com/ado/2007/08/dataservices/metadata\\" xmlns:sap=\\"http://www.sap.com/Protocols/SAPData\\">
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/Common.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Common\\" Namespace=\\"com.sap.vocabularies.Common.v1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"Core\\" Namespace=\\"Org.OData.Core.V1\\"/>
  </edmx:Reference>
  <edmx:Reference Uri=\\"https://sap.github.io/odata-vocabularies/vocabularies/UI.xml\\" xmlns:edmx=\\"http://docs.oasis-open.org/odata/ns/edmx\\">
    <edmx:Include Alias=\\"UI\\" Namespace=\\"com.sap.vocabularies.UI.v1\\"/>
  </edmx:Reference>
  <edmx:DataServices m:DataServiceVersion=\\"2.0\\">
    <Schema Namespace=\\"sap.fe.mockserver.ValidCDSWithCommon\\" xmlns=\\"http://schemas.microsoft.com/ado/2008/09/edm\\">
      <EntityContainer Name=\\"EntityContainer\\" m:IsDefaultEntityContainer=\\"true\\">
        <EntitySet Name=\\"RootElement\\" EntityType=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement\\"/>
        <EntitySet Name=\\"Currencies\\" EntityType=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\"/>
        <EntitySet Name=\\"Currencies_texts\\" EntityType=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts\\"/>
        <AssociationSet Name=\\"RootElement_Currency\\" Association=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement_Currency\\">
          <End Role=\\"RootElement\\" EntitySet=\\"RootElement\\"/>
          <End Role=\\"Currencies\\" EntitySet=\\"Currencies\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"Currencies_texts_1\\" Association=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts_1\\">
          <End Role=\\"Currencies\\" EntitySet=\\"Currencies\\"/>
          <End Role=\\"Currencies_texts\\" EntitySet=\\"Currencies_texts\\"/>
        </AssociationSet>
        <AssociationSet Name=\\"Currencies_localized\\" Association=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_localized\\">
          <End Role=\\"Currencies\\" EntitySet=\\"Currencies\\"/>
          <End Role=\\"Currencies_texts\\" EntitySet=\\"Currencies_texts\\"/>
        </AssociationSet>
      </EntityContainer>
      <EntityType Name=\\"RootElement\\">
        <Key>
          <PropertyRef Name=\\"ID\\"/>
        </Key>
        <Property Name=\\"ID\\" Type=\\"Edm.Guid\\" Nullable=\\"false\\"/>
        <Property Name=\\"Prop1\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"Prop2\\" Type=\\"Edm.String\\"/>
        <Property Name=\\"isBoundAction1Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction2Hidden\\" Type=\\"Edm.Boolean\\"/>
        <Property Name=\\"isBoundAction3Hidden\\" Type=\\"Edm.Boolean\\"/>
        <NavigationProperty Name=\\"Currency\\" Relationship=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement_Currency\\" FromRole=\\"RootElement\\" ToRole=\\"Currencies\\"/>
        <Property Name=\\"Currency_code\\" Type=\\"Edm.String\\" MaxLength=\\"3\\"/>
      </EntityType>
      <EntityType Name=\\"Currencies\\">
        <Key>
          <PropertyRef Name=\\"code\\"/>
        </Key>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"descr\\" Type=\\"Edm.String\\" MaxLength=\\"1000\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\" MaxLength=\\"3\\" Nullable=\\"false\\"/>
        <Property Name=\\"symbol\\" Type=\\"Edm.String\\" MaxLength=\\"5\\"/>
        <NavigationProperty Name=\\"texts\\" Relationship=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts_1\\" FromRole=\\"Currencies\\" ToRole=\\"Currencies_texts\\"/>
        <NavigationProperty Name=\\"localized\\" Relationship=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_localized\\" FromRole=\\"Currencies\\" ToRole=\\"Currencies_texts\\"/>
      </EntityType>
      <EntityType Name=\\"Currencies_texts\\">
        <Key>
          <PropertyRef Name=\\"locale\\"/>
          <PropertyRef Name=\\"code\\"/>
        </Key>
        <Property Name=\\"locale\\" Type=\\"Edm.String\\" MaxLength=\\"14\\" Nullable=\\"false\\"/>
        <Property Name=\\"name\\" Type=\\"Edm.String\\" MaxLength=\\"255\\"/>
        <Property Name=\\"descr\\" Type=\\"Edm.String\\" MaxLength=\\"1000\\"/>
        <Property Name=\\"code\\" Type=\\"Edm.String\\" MaxLength=\\"3\\" Nullable=\\"false\\"/>
      </EntityType>
      <Association Name=\\"RootElement_Currency\\">
        <End Role=\\"RootElement\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement\\" Multiplicity=\\"*\\"/>
        <End Role=\\"Currencies\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\" Multiplicity=\\"0..1\\"/>
        <ReferentialConstraint>
          <Principal Role=\\"Currencies\\">
            <PropertyRef Name=\\"code\\"/>
          </Principal>
          <Dependent Role=\\"RootElement\\">
            <PropertyRef Name=\\"Currency_code\\"/>
          </Dependent>
        </ReferentialConstraint>
      </Association>
      <Association Name=\\"Currencies_texts_1\\">
        <End Role=\\"Currencies\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\" Multiplicity=\\"1\\">
          <OnDelete Action=\\"Cascade\\"/>
        </End>
        <End Role=\\"Currencies_texts\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts\\" Multiplicity=\\"*\\"/>
      </Association>
      <Association Name=\\"Currencies_localized\\">
        <End Role=\\"Currencies\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\" Multiplicity=\\"*\\"/>
        <End Role=\\"Currencies_texts\\" Type=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts\\" Multiplicity=\\"0..1\\"/>
      </Association>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Prop1\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"First Prop\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Prop2\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Second Propy\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/isBoundAction1Hidden\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 1 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/isBoundAction2Hidden\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 2 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/isBoundAction3Hidden\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"Bound Action 3 Hidden\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Currency\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Currency}\\"/>
        <Annotation Term=\\"Core.Description\\" String=\\"{i18n>CurrencyCode.Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.RootElement/Currency_code\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Currency}\\"/>
        <Annotation Term=\\"Common.ValueList\\">
          <Record Type=\\"Common.ValueListType\\">
            <PropertyValue Property=\\"Label\\" String=\\"{i18n>Currency}\\"/>
            <PropertyValue Property=\\"CollectionPath\\" String=\\"Currencies\\"/>
            <PropertyValue Property=\\"Parameters\\">
              <Collection>
                <Record Type=\\"Common.ValueListParameterInOut\\">
                  <PropertyValue Property=\\"LocalDataProperty\\" PropertyPath=\\"Currency_code\\"/>
                  <PropertyValue Property=\\"ValueListProperty\\" String=\\"code\\"/>
                </Record>
                <Record Type=\\"Common.ValueListParameterDisplayOnly\\">
                  <PropertyValue Property=\\"ValueListProperty\\" String=\\"name\\"/>
                </Record>
              </Collection>
            </PropertyValue>
          </Record>
        </Annotation>
        <Annotation Term=\\"Core.Description\\" String=\\"{i18n>CurrencyCode.Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"UI.Identification\\">
          <Collection>
            <Record Type=\\"UI.DataField\\">
              <PropertyValue Property=\\"Value\\" Path=\\"name\\"/>
            </Record>
          </Collection>
        </Annotation>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/name\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Name}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/descr\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/code\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Text\\" Path=\\"name\\"/>
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>CurrencyCode}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies/symbol\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>CurrencySymbol}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts/name\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Name}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts/descr\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>Description}\\"/>
      </Annotations>
      <Annotations Target=\\"sap.fe.mockserver.ValidCDSWithCommon.Currencies_texts/code\\" xmlns=\\"http://docs.oasis-open.org/odata/ns/edm\\">
        <Annotation Term=\\"Common.Text\\" Path=\\"name\\"/>
        <Annotation Term=\\"Common.Label\\" String=\\"{i18n>CurrencyCode}\\"/>
      </Annotations>
    </Schema>
  </edmx:DataServices>
</edmx:Edmx>"
`;
